feat(api): moved api-key to query. Added headers-check for okr-team-secret. Added information on the frontend for the api
